# vision-biocell

./: .gitignore  LICENSE  README.md  build.py  environment.yaml  pyproject.toml  requirements.txt
scripts/: build.py  mask_combiner.py  mask_metrics_calculator.py
src/bsmu/biocell/: __init__.py
src/bsmu/biocell/actors/shape/: cancer_span.py
src/bsmu/biocell/analysis/: isup.py
src/bsmu/biocell/app/: __init__.py  app.py  main.py
src/bsmu/biocell/app/configs/: BiocellApp.conf.yaml
src/bsmu/biocell/configs/default/bsmu.biocell/: app.BiocellApp.conf.yaml  plugins.PcaSegmenterPlugin.conf.yaml  plugins.TissueDnnSegmenterPlugin.conf.yaml  plugins.gui.IsupAnalysisPlugin.conf.yaml
src/bsmu/biocell/configs/default/bsmu.vision/: plugins.palette.PalettePackSettingsPlugin.conf.yaml  (+2 more)
src/bsmu/biocell/core/analysis/: isup.py
src/bsmu/biocell/core/converters/: gleason_to_pixel.py
src/bsmu/biocell/core/domain/: __init__.py  gleason.py  gleason_analysis.py  pixel_class.py
src/bsmu/biocell/inference/segmenters/: tiled.py
src/bsmu/biocell/infervis/: mdi.py
src/bsmu/biocell/infervis/segmenters/: mdi.py  tiled.py
src/bsmu/biocell/plugins/: dnn_tissue_segmenter.py  gui_dnn_tissue_segmenter.py  gui_tissue_segmenter.py  kidney_tissue_segmenter.py  pc_dir_gui_segmenter.py  pc_gui_segmenter.py  pc_isup_predictor.py  pc_segmenter.py  pca_dir_segmenter.py  pca_segmenter.py  tissue_dnn_segmenter.py  tissue_threshold_segmenter.py
src/bsmu/biocell/plugins/configs/: PcSegmenterPlugin.conf.yaml
src/bsmu/biocell/plugins/gui/: isup_analysis.py  main_window.py  palette_view.py  pca_dir_segmenter.py  pca_segmenter.py  tissue_dnn_segmenter.py  tissue_threshold_segmenter.py
src/bsmu/biocell/plugins/tools/: cancer_segment.py  gleason_grading.py  hed_wsi_smart_brush.py
(+1 files in other folders)
